test: deterministic 3D frame-rate measurement and native NVIDIA findings
Add a swap counter (HomeComponent3D.getRenderedFrameCount) and make
Home3DFpsBenchmark report a deterministic average frame rate from the counter
over a fixed camera sweep, instead of sampling the rolling FPS value (which was
too noisy to A/B). This makes 3D frame-rate changes reproducible.

Using a native-Windows measurement loop (Windows JDK driven from WSL through
cmd.exe interop, jars and natives staged on C:), the reference home on a real
GTX 1660 Ti (OpenGL 4.6) shows:

- compile() of the scene branch is about a 40x win (~0.25 FPS -> ~10 FPS avg)
  and is essential;
- frame rate is strongly view-dependent and still ~1 FPS facing the high-poly
  models, even compiled;
- toggling j3d.displaylist has no effect, so the heavy model geometry is not
  GPU-resident and is re-submitted each frame.

The home is dominated by very large models (a 37 MB Collada model, several
5-7 MB tree meshes), not textures, so the next measured step is by-reference /
VBO geometry (task D4). The counter adds no user-visible behavior; build,
make test-core (9) and make test-gui (15) pass; source/bytecode stays Java 8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>